--- a/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
@@ -19,40 +19,28 @@
 		<ui:define name="header">
 			<h:form id="menuForm">
 				<p:menubar>  
-		            <p:menuitem value="My Office" action="office" ajax="false" />  
-		            <p:menuitem value="My Account" action="office" ajax="false" />
-		            <p:menuitem value="Preferences" onclick="prfDlg.show()" />
+		            <p:menuitem value="Back to my Office" action="office" ajax="false" />  
 			    </p:menubar>
-			   <p:dialog id="prefsDialog" widgetVar="prfDlg" width="400" height="300" header="User Preferences">
-	   				<p:panelGrid columns="2" styleClass="preferences">
-		    		    <h:outputLabel value="Daily Reports" for="dailyreports" styleClass="label"/>
-		    		    <p:selectBooleanCheckbox id="dailyreports" value="#{userPrefs.prefs.dailyreports}" styleClass="label" />
-		    		    <h:outputLabel value="E-mail Notifications" for="emailnotify" styleClass="label"/>
-		    		    <p:selectBooleanCheckbox id="emailnotify" value="#{userPrefs.prefs.emailnotification}" styleClass="label" />
-		    		    <h:outputLabel value="Mail Content" for="mailText" styleClass="label"/>
-		    		    <h:inputTextarea id="mailText" value="#{userPrefs.prefs.emailcontent}" styleClass="field"/>
-		    		    <f:facet name="footer">
-	   		    			<p:commandButton id="saveBtn" styleClass="button" value="Save" actionListener="#{userPrefs.save()}" 
-								 process="@this,mailText,dailyreports,emailnotify" oncomplete="prfDlg.hide();" />
-		    		    </f:facet>
-			    	</p:panelGrid>
-    			</p:dialog>
 		    </h:form>
 		</ui:define>
 		<ui:define name="body">
 			<p:growl id="growl" showDetail="true" life="3000" />
+			<p:graphicImage id="logo" value="../resources/images/login/logo_cd_small.png" styleClass="logo"/>
 			<h:form id="mainform">
-			<p:scrollPanel styleClass="rss">
-				<p:feedReader value="http://localhost:8080/Cloudental-cdi/resources/rss/news-rss.xml" var="feed" >
-					<h:outputText value="#{feed.title}" style="font-weight: bold"/><br/>
-					<h:outputText value="#{feed.description.value}" escape="false"/>
-					<p:separator />
-				</p:feedReader>
-			</p:scrollPanel>
-			
+   				<h:panelGrid columns="2" styleClass="preferences">
+	    		    <h:outputLabel value="Daily Reports" for="dailyreports" styleClass="label"/>
+	    		    <p:selectBooleanCheckbox id="dailyreports" value="#{userPrefs.prefs.dailyreports}" styleClass="label" />
+	    		    <h:outputLabel value="E-mail Notifications" for="emailnotify" styleClass="label"/>
+	    		    <p:selectBooleanCheckbox id="emailnotify" value="#{userPrefs.prefs.emailnotification}" styleClass="label" />
+		    	</h:panelGrid>
+		    	<h:commandButton id="saveBtn" styleClass="button" value="Save Preferences" actionListener="#{userPrefs.save()}" 
+							 process="@this,mailText,dailyreports,emailnotify"/>
+				<br/>
+		    	<h:commandButton id="resetBtn" styleClass="button" value="Reset Preferences"/>
+		    	<br/>
+		    	<h:inputTextarea id="mailText" value="#{userPrefs.prefs.emailcontent}" 
+	   		    				 styleClass="field"/>		    	
 			</h:form>
-		</ui:define>
-		<ui:define name="footer">
 		</ui:define>
 	</ui:composition>
 </html>
