--- a/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/reception.xhtml
@@ -27,52 +27,67 @@
 		<ui:define name="body">
 			<p:growl id="growl" showDetail="true" life="4000" />
 			<h:form id="mainform">
-				<p:graphicImage id="logo" value="../resources/images/login/logo_cd_small.png" styleClass="logo"/>
-				<br/>
-				<h:panelGrid columns="2" styleClass="buttonPanel">
-			    	<p:commandButton id="saveBtn" styleClass="button" value="Save " actionListener="#{userPrefs.save()}" 
-								 process="@this,mailText,dailyreports,emailnotify,
-								 titleformat,defaultSwitcher,schedMinhour,schedMaxhour,schedStarthour,schedSlotmins"/>
-			    	<p:commandButton id="resetBtn" styleClass="button" value="Reset"/>
+				<h:panelGrid columns="1">			
+					<h:panelGrid columns="2" cellpadding="5">
+						<p:graphicImage id="logo" value="../resources/images/login/logo_cd_small.png" styleClass="logo"/>
+						<h:panelGrid columns="3" styleClass="userinfo" cellpadding="5">
+					    	<h:outputText value="#{officeReception.user.surname}    " />
+					    	<h:outputText value="#{officeReception.user.name}" />
+					    	<h:outputText value="( #{officeReception.user.username} )" />
+				    	</h:panelGrid>
+					</h:panelGrid>
+					<h:panelGrid columns="2" styleClass="buttonPanel" cellpadding="5">
+				    	<p:commandButton id="saveBtn" styleClass="button" value="Save " actionListener="#{userPrefs.save()}" 
+									 process="@this,mailText,dailyreports,emailnotify,
+									 titleformat,defaultSwitcher,schedMinhour,schedMaxhour,schedStarthour,schedSlotmins
+									 ,reportemail"/>
+				    	<p:commandButton id="resetBtn" styleClass="button" value="Reset"/>
+					</h:panelGrid>
 				</h:panelGrid>
-				<br/>
-				<h:panelGrid columns="2" styleClass="schedPrefsPanel">
-					<h:outputLabel for="schedMinhour" value="Scheduler min. hour: " styleClass="label"/>  
-            		<p:spinner id="schedMinhour" value="#{userPrefs.prefs.schedulerMinHour}" min="0" max="24" styleClass="button"/>
-					<h:outputLabel for="schedMaxhour" value="Scheduler max. hour: " styleClass="label"/>  
-            		<p:spinner id="schedMaxhour" value="#{userPrefs.prefs.schedulerMaxHour}" min="0" max="24" styleClass="button"/>         			
-					<h:outputLabel for="schedStarthour" value="Scheduler start hour: " styleClass="label"/>  
-            		<p:spinner id="schedStarthour" value="#{userPrefs.prefs.schedulerStartHour}" min="0" max="24" styleClass="button"/>         			
-					<h:outputLabel for="schedSlotmins" value="Scheduler slot minutes: " styleClass="label"/>  
-            		<p:spinner id="schedSlotmins" value="#{userPrefs.prefs.schedulerSlotMins}" min="5" max="60" stepFactor="5" styleClass="button"/>         			
-				</h:panelGrid>
-				<br/>
-   				<h:panelGrid columns="2" styleClass="preferencesPanel">
-	    		    <h:outputLabel value="Daily Reports" for="dailyreports" styleClass="label"/>
-	    		    <p:selectBooleanCheckbox id="dailyreports" value="#{userPrefs.prefs.dailyreports}" styleClass="label" />
-	    		    <h:outputLabel value="E-mail Notifications" for="emailnotify" styleClass="label"/>
-	    		    <p:selectBooleanCheckbox id="emailnotify" value="#{userPrefs.prefs.emailnotification}" styleClass="label" />
-   	    		    <h:outputLabel value="Visit title" for="titleformat" styleClass="label"/>
-	    		    <p:selectOneMenu id="titleformat" value="#{userPrefs.prefs.eventTitleFormatType}" effect="fade" styleClass="button">
-		    		    <f:selectItems value="#{userPrefs.eventtitleformatTypes}" var="type" 
-		    		    				itemLabel="#{type.description}" itemValue="#{type.value}" />  
-	    		    </p:selectOneMenu>
- 
-					<h:outputText value="Default Switcher:" styleClass="label"/>   
-        			<p:themeSwitcher styleClass="button" id="defaultSwitcher" value="#{userPrefs.prefs.theme}">  
-            			<f:selectItem itemLabel="Choose Another Theme" itemValue="" />  
-            			<f:selectItems value="#{userPrefs.themes}" /> 
-        			</p:themeSwitcher> 
-					<h:outputText value="Email Content:" styleClass="label"/>
-			    	<h:inputTextarea id="mailText" value="#{userPrefs.prefs.emailcontent}" 
-		   		    				 styleClass="mailcontent"/>		    	
+   				<h:panelGrid columns="2" cellpadding="5">
+	   				<h:panelGrid columns="2" styleClass="preferencesPanel">
+		    		    <h:outputLabel value="Daily Reports" for="dailyreports" styleClass="label"/>
+		    		    <p:selectBooleanCheckbox id="dailyreports" value="#{userPrefs.prefs.dailyreports}" styleClass="label" />
+		    		    <h:outputLabel value="E-mail Notifications" for="emailnotify" styleClass="label"/>
+		    		    <p:selectBooleanCheckbox id="emailnotify" value="#{userPrefs.prefs.emailnotification}" styleClass="label" />
+	   	    		    <h:outputLabel value="Visit title" for="titleformat" styleClass="label"/>
+		    		    <p:selectOneMenu id="titleformat" value="#{userPrefs.prefs.eventTitleFormatType}" effect="fade" styleClass="button">
+			    		    <f:selectItems value="#{userPrefs.eventtitleformatTypes}" var="type" 
+			    		    				itemLabel="#{type.description}" itemValue="#{type.value}" />  
+		    		    </p:selectOneMenu>
+	 
+						<h:outputText value="Select Theme" styleClass="label"/>   
+	        			<p:themeSwitcher styleClass="button" id="defaultSwitcher" value="#{userPrefs.prefs.theme}">  
+	            			<f:selectItem itemLabel="Choose Another Theme" itemValue="" />  
+	            			<f:selectItems value="#{userPrefs.themes}" /> 
+	        			</p:themeSwitcher> 
+			    	</h:panelGrid>
+					<h:panelGrid columns="2" styleClass="schedPrefsPanel">
+						<h:outputLabel for="schedMinhour" value="Scheduler minimum hour" styleClass="label"/>  
+	            		<p:spinner id="schedMinhour" value="#{userPrefs.prefs.schedulerMinHour}" min="0" max="24" styleClass="button"/>
+						<h:outputLabel for="schedMaxhour" value="Scheduler maximum hour" styleClass="label"/>  
+	            		<p:spinner id="schedMaxhour" value="#{userPrefs.prefs.schedulerMaxHour}" min="0" max="24" styleClass="button"/>         			
+						<h:outputLabel for="schedStarthour" value="Scheduler start hour" styleClass="label"/>  
+	            		<p:spinner id="schedStarthour" value="#{userPrefs.prefs.schedulerStartHour}" min="0" max="24" styleClass="button"/>         			
+						<h:outputLabel for="schedSlotmins" value="Scheduler slot minutes " styleClass="label"/>  
+	            		<p:spinner id="schedSlotmins" value="#{userPrefs.prefs.schedulerSlotMins}" min="5" max="60" stepFactor="5" styleClass="button"/>         			
+					</h:panelGrid>
 		    	</h:panelGrid>
-		    	<h:panelGrid columns="3" styleClass="userinfo">
-			    	<h:outputText value="#{officeReception.user.surname}" />
-			    	<h:outputText value="    " />
-			    	<h:outputText value="#{officeReception.user.name}" />
-			    	<h:outputText value="#{officeReception.user.username}" />
-		    	</h:panelGrid>
+		    	<h:panelGrid columns="1" cellpadding="5" style="position:relative; top:5px;">
+			    	<p:panelGrid columns="4" title="On Demand Reports" cellpadding="5">
+				    	<f:facet name="header">on Demand Reporting</f:facet>
+					   	<p:commandButton id="ptnreportBtn" styleClass="button" actionListener="#{userPrefs.sendPatientsReport}" 
+					   					 value="Patient Report"/>
+					   	<p:commandButton id="phrreportBtn" styleClass="button" actionListener="#{userPrefs.sendPharmacyReport()}"
+					   					 value="Pharmacy Report" process="reportemail"/>
+					    <h:outputText value="send to:" styleClass="label"/>
+					   	<p:inputText id="reportemail" value="#{userPrefs.prefs.reportemail}" style="width:300px" styleClass="field"/>
+				    </p:panelGrid>
+			    	<p:panelGrid columns="1" style="width:100%">
+			    		<f:facet name="header">Email notification content</f:facet>
+						<h:inputTextarea id="mailText" value="#{userPrefs.prefs.emailcontent}" style="width:100%; height:160px"/>
+			    	</p:panelGrid>
+				</h:panelGrid>			    			    	
 			</h:form>
 		</ui:define>
 	</ui:composition>
