--- a/Cloudental-cdi/src/main/webapp/screens/office.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/office.xhtml
@@ -22,8 +22,9 @@
 	<ui:define name="body">
 		<p:growl id="growl" showDetail="true" life="4000" />
 		<h:form id="menuForm">
-			<p:menubar>  
+			<p:menubar>
         	    <p:menuitem value="Reception" action="reception" ajax="false" />
+        	    <p:menuitem value="Pharmacy" action="pharmacy" ajax="false" />
 		    </p:menubar>
 		</h:form>
 		<h:form id="mainForm">
