--- a/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
@@ -38,7 +38,7 @@
 				var="p" itemLabel="#{p.name} #{p.surname}" itemValue="#{p}"
 				converter="patientConverter" forceSelection="true" styleClass="field">
 				<p:column styleClass="label">  
-                   		#{p.name} #{p.surname}  
+                   		#{p.surname} #{p.name}  
                	</p:column>
 			</p:autoComplete>
 			<p:commandButton type="reset" value="Reset" styleClass="button"/>
