new cloudental header  (beadcrumb) new footer (showing stage) removed background image descl from all and moved to template same for header and footer now all using the template one ...

--- a/Cloudental-cdi/src/main/webapp/screens/base/cloudent-template.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/cloudent-template.xhtml
@@ -5,6 +5,13 @@
 	<h:head>
 	  <title><ui:insert name="title">Cloudent 0.3</ui:insert></title>
 	  <ui:insert name="head"></ui:insert>
+	  <link href="../resources/css/office-style.css" rel="stylesheet" type="text/css" />
+	  <style type="text/css">
+		body {
+			background-image: url(../resources/images/login/login_background.png);
+			background-size: cover;
+		}
+		</style>
 	</h:head>
 
 	<body>
