--- a/Cloudental-cdi/src/main/webapp/screens/pharmacy.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/pharmacy.xhtml
@@ -7,32 +7,33 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:f="http://java.sun.com/jsf/core" 
 	template="/screens/base/cloudent-template.xhtml">
-	<ui:define name="title">Pharmacy</ui:define>
+	<ui:define name="title">Pharmacy Area</ui:define>
 	<ui:define name="head">
-			<link href="../resources/css/office-style.css" rel="stylesheet" type="text/css" />
-			<link href="../resources/css/pharmacy-style.css" rel="stylesheet" type="text/css" />
-			<style type="text/css">
-			body {
-				background-image: url(../resources/images/reception_background.png);
-				background-size: cover;
-			}
-			</style>
-		
-	</ui:define>
-	
-	<ui:define name="header">
-		<h:form id="menuForm">
-			<p:menubar>  
-	            <p:menuitem value="Back to my Office" action="office" ajax="false" />  
-		    </p:menubar>
-	    </h:form>
+			<link href="../resources/css/pharmacy-styles.css" rel="stylesheet" type="text/css" />
 	</ui:define>
 	<ui:define name="body">
 		<p:growl id="messages" showDetail="true" widgetVar="msg"/>
 		<h:form id="mainForm">
 			<p:dataTable var="row" value="#{pharmacy.presciprionSheet}" paginator="true" rows="15"
 						sortBy="#{row.medicine.name}">
-				<f:facet name="header">Pharmacy - Medicine count #{pharmacy.medicineCount} </f:facet>
+				<f:facet name="header">
+					Patient Name 
+					<p:autoComplete required="true" requiredMessage="Select a Patient first!!" id="patient" value="#{pharmacy.autocompletePatient}"
+							completeMethod="#{pharmacy.completePatient}"
+							var="p" itemLabel="#{p.surname} #{p.name}" itemValue="#{p}"
+							converter="patientConverter" forceSelection="true" styleClass="field">
+						<p:column styleClass="label">  
+               				#{p.surname} #{p.name}  
+		               	</p:column>
+					</p:autoComplete>
+					<p:commandButton id="printButton"
+						value="Print Prescription" ajax="false"
+						update="messages" icon="ui-icon-arrowthichk-s"
+						onclick="PrimeFaces.monitorDownload(start, stop)"
+						styleClass="printbutton">
+						<p:fileDownload contentDisposition="inline" value="#{pharmacy.fetchPrescription()}"/>
+					</p:commandButton>
+				</f:facet>
 				<p:ajax event="rowEdit" listener="#{pharmacy.onEdit}" update=":messages" />  
         
 				<p:column sortBy="#{row.medicine.name}">
@@ -51,7 +52,7 @@
 					<p:cellEditor>
 						<f:facet name="output"><h:outputText value="#{row.routeDescription}" /></f:facet>
 						<f:facet name="input">
-							<p:selectOneMenu value="#{row.route}" styleClass="field">
+							<p:selectOneMenu value="#{row.route}" styleClass="editorfield">
 								<f:selectItems value="#{pharmacy.routes}"  
 		                            var="route"   
         		                    itemLabel="#{route.description}"  
@@ -63,14 +64,16 @@
 				<p:column headerText="Every" styleClass="label" style="width:20px">
 					<p:cellEditor>
 						<f:facet name="output"><h:outputText value="#{row.frequency}" /></f:facet>
-						<f:facet name="input"><p:spinner value="#{row.frequency}" stepFactor="1"/></f:facet>						
+						<f:facet name="input">
+							<p:spinner value="#{row.frequency}" stepFactor="1" styleClass="editorfield"/>
+						</f:facet>						
 					</p:cellEditor>
 				</p:column>
 				<p:column styleClass="label">
 					<p:cellEditor>
 						<f:facet name="output"><h:outputText value="#{row.freqUnitDescription}" /></f:facet>
 						<f:facet name="input">
-							<p:selectOneMenu value="#{row.frequnit}" styleClass="field">
+							<p:selectOneMenu value="#{row.frequnit}" styleClass="editorfield">
 								<f:selectItems value="#{pharmacy.freqAndDurUnits}"  
 		                            var="unit"   
         		                    itemLabel="#{unit.freqUnitDescription}"  
@@ -83,14 +86,16 @@
 				<p:column headerText="For" styleClass="label" style="width:20px">
 					<p:cellEditor>
 						<f:facet name="output"><h:outputText value="#{row.duration}" /></f:facet>
-						<f:facet name="input"><p:spinner value="#{row.duration}" stepFactor="1"/></f:facet>						
+						<f:facet name="input">
+							<p:spinner value="#{row.duration}" stepFactor="1" styleClass="editorfield"/>
+						</f:facet>						
 					</p:cellEditor>
 				</p:column>
 				<p:column styleClass="label">
 					<p:cellEditor>
 						<f:facet name="output"><h:outputText value="#{row.durUnitDescription}" /></f:facet>
 						<f:facet name="input">
-							<p:selectOneMenu value="#{row.durunit}" styleClass="field">
+							<p:selectOneMenu value="#{row.durunit}" styleClass="editorfield">
 								<f:selectItems value="#{pharmacy.freqAndDurUnits}"  
 		                            var="unit"   
         		                    itemLabel="#{unit.durUnitDescription}"  
@@ -103,22 +108,7 @@
 				<p:column>
 					<p:rowEditor/>
 				</p:column>
-				<f:facet name="footer">
-					<p:commandButton id="printButton"
-						value="Print Prescription" ajax="false"
-						update="messages" icon="ui-icon-arrowthichk-s"
-						onclick="PrimeFaces.monitorDownload(start, stop)">
-						<p:fileDownload contentDisposition="inline" value="#{pharmacy.fetchPrescription()}"/>
-					</p:commandButton>
-					<p:autoComplete required="true" requiredMessage="Select a Patient first!!" id="patient" value="#{pharmacy.autocompletePatient}"
-							completeMethod="#{pharmacy.completePatient}"
-							var="p" itemLabel="#{p.surname} #{p.name}" itemValue="#{p}"
-							converter="patientConverter" forceSelection="true" styleClass="field">
-						<p:column styleClass="label">  
-               				#{p.surname} #{p.name}  
-		               	</p:column>
-					</p:autoComplete>
-				</f:facet>
+				<f:facet name="footer">Medicine count #{pharmacy.medicineCount}</f:facet>
 			</p:dataTable>
 		</h:form>
 		<p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">  
