--- a/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
@@ -2,13 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" 
       xmlns:ui="http://java.sun.com/jsf/facelets" 
       xmlns:h="http://java.sun.com/jsf/html" 
+      xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
 
 	<h:body>
+		<h:form id="footerform">
    		<!--  h:link value="Create New User" outcome="/screens/createUser" /><br/ -->
    		<!--  h:link value="Login" outcome="/screens/welcome" / -->
-   		<!--  h:outputText value="Stage:#{facesContext.application.projectStage}"/ -->
-   		
+   		<h:outputText value="Stage:#{facesContext.application.projectStage}"/>
+   		</h:form>
 	</h:body>
  
    
