--- a/Cloudental-cdi/src/main/webapp/screens/base/header.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/header.xhtml
@@ -9,21 +9,21 @@
 	   	<h:form id="menuForm">
 	   		<h:panelGrid columns="2" >
 				<p:graphicImage id="logo" value="../resources/images/login/logo_cd_small.png" />
-				<h:panelGrid columns="2" style="margin-left:100px">
+				<h:panelGrid columns="2" style="margin-left:50%">
 				<h:outputText value="Cloudental " 
 					style="font-size: 40px !important;
 						   font-family: sans-serif !important;"/>
 				<h:outputText value="by Mpdmal Software" 
 					style="font-size: 9px !important;
-						   font-family: sans-serif !important;"/>
+						   font-family: sans-serif !important;
+						   width:40px"/>
 			   </h:panelGrid>
 			</h:panelGrid>
-				<p:breadCrumb>  
-				    <p:menuitem value="Office Area" action="office" ajax="false" styleClass="button"/>
-	          	    <p:menuitem value="Reception Area" action="reception" ajax="false" styleClass="button"/>
-	        	    <p:menuitem value="Pharmacy Area" action="pharmacy" ajax="false" styleClass="button"/>
-				</p:breadCrumb>
-
+			<p:breadCrumb>  
+			    <p:menuitem value="Office Area" action="office" ajax="false" styleClass="button"/>
+	            <p:menuitem value="Reception Area" action="reception" ajax="false" styleClass="button"/>
+	            <p:menuitem value="Pharmacy Area" action="pharmacy" ajax="false" styleClass="button"/>
+			</p:breadCrumb>
     	</h:form>
    </h:body>
 </html>
