--- a/Cloudental-cdi/src/main/webapp/screens/login.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/login.xhtml
@@ -19,7 +19,7 @@
  	<body>
 		<div>
 			<p:growl id="growl" showDetail="true" life="3000" /> 
-	        <h:form id="loginForm" styleClass="loginForm">
+	        <h:form id="loginForm" style="top: 10px;left: 10px;">
 	        	<h:panelGrid columnClasses="1">	        
 		        	<h:panelGrid columnClasses="1">
 			           	<h:inputText id="username" value="#{loginService.name}" 
@@ -35,40 +35,52 @@
 	           	</h:panelGrid>		           	
 				<p:graphicImage id="logo" value="../resources/images/login/logo_cd.png" styleClass="logo"/> 
 				<br/>
-				<h:panelGrid columns="1" style="position: fixed; top: 100%; margin-top: -70px;">				
-			        <h:outputLink id="newUser" value="javascript:void(0)" onclick="dlgCreate.show()" 
+				<h:panelGrid columns="1" style="position: fixed; top: 100%; margin-top: -70px;">
+					<h:commandButton type="button" id="newUser" value="New user" 
+									onclick="dlgCreate.show()" title="Create New User" />				
+					<h:commandButton type="button" id="contactUs" value="Contact us"
+									onclick="dlgContact.show()" title="Contact Cloud.M"/>				
+			        <!--  h:outputLink id="newUser" value="javascript:void(0)" onclick="dlgCreate.show()" 
 			        				title="Create New User" >     
 					    <p:graphicImage value="../resources/images/login/new-user.png" />  
 					</h:outputLink>
 			        <h:outputLink id="contactUs" value="javascript:void(0)" onclick="dlgContact.show()" 
 			        				title="Contact Cloud.M" >     
 					    <p:graphicImage value="../resources/images/login/contact.png" />  
-					</h:outputLink>
+					</h:outputLink -->
 				</h:panelGrid>
 	        </h:form>			
-			<p:dialog id="dialogCreate" header="Create New User" widgetVar="dlgCreate">  
-			    <h:form id="dlgFrm">
-   			        <h:panelGrid columns="2" cellpadding="5">
-						<h:outputLabel for="name" value="Name " /> <p:inputText id="name" value="#{createUserService.dentist.name}"/>
-						<h:outputLabel for="sname" value="Surname " /> <p:inputText id="sname" value="#{createUserService.dentist.surname}"/>
-						<h:outputLabel for="uname" value="Username " /> <p:inputText id="uname" value="#{createUserService.dentist.username}"/>
-						<h:outputLabel for="pwd" value="Password " /> <p:password id="pwd" value="#{createUserService.dentist.password}"/>
-						<h:outputLabel for="pwd2" value="Re-type " /> <p:password id="pwd2" value="#{createUserService.passwordConfirm}"/>
-			            <f:facet name="footer">  
-			                <p:commandButton id="createButton" value="Create" update=":growl"   
-			                    actionListener="#{createUserService.createDentist()}"   
-			                    oncomplete="handleCreateRequest(xhr, status, args)"/>  
-			            </f:facet>
-			        </h:panelGrid>  
+			<p:dialog id="dialogCreate" header="Create New User" widgetVar="dlgCreate" modal="true"
+						resizable="false" width="300" height="150">  
+			    <h:form id="dlgFrm" > 
+   			        <h:panelGrid columns="2" cellpadding="2" style="width:100%">
+						<h:outputLabel for="name" value="Name " styleClass="createLabel"/>
+						<h:inputText id="name" value="#{createUserService.dentist.name}" styleClass="createInput"/>
+						<h:outputLabel for="sname" value="Surname " styleClass="createLabel"/> 
+						<h:inputText id="sname" value="#{createUserService.dentist.surname}" styleClass="createInput"/>
+						<h:outputLabel for="uname" value="Username " styleClass="createLabel"/> 
+						<h:inputText id="uname" value="#{createUserService.dentist.username}" styleClass="createInput"/>
+						<h:outputLabel for="pwd" value="Password " styleClass="createLabel"/> 
+						<h:inputSecret id="pwd" value="#{createUserService.dentist.password}" styleClass="createInput"/>
+						<h:outputLabel for="pwd2" value="Re-type " styleClass="createLabel"/> 
+						<h:inputSecret id="pwd2" value="#{createUserService.passwordConfirm}" styleClass="createInput"/>
+			        </h:panelGrid>
+	                <p:commandButton id="createButton" value="Create" update=":growl"   
+	                    actionListener="#{createUserService.createDentist()}"   
+	                    oncomplete="handleCreateRequest(xhr, status, args)" styleClass="button"/>  
 			    </h:form>  
 			</p:dialog>  
-			<p:dialog id="dialogContact" header="Contact Cloud.M" widgetVar="dlgContact" showEffect="explode" modal="true">
+			<p:dialog id="dialogContact" header="Contact Cloud.M" widgetVar="dlgContact" showEffect="explode"  
+							modal="true" width="400" height="230" >
 			    <h:form id="dlgFrmContact">
-			    	<p:panel>
-			            <f:facet name="footer">  
-			                <p:commandButton id="sendButton" value="Send" update=":growl"	/>  
-			            </f:facet>
-		            </p:panel>
+			    	<h:panelGrid columns="1" style="width:100%;height:100%">
+			    		<h:inputText id="msgtitle" value="#{loginService.emailTitle}" style="width:100%" styleClass="contactInfo"/>
+			    		<h:inputTextarea id="msgarea" value="#{loginService.emailMessage}" 
+			    					rows="11" style="width:100%" styleClass="contactInfo"/>
+         			</h:panelGrid>
+	                <p:commandButton id="sendButton" value="Send" actionListener="#{loginService.contactCloudental()}" 
+                				update=":growl"	process="@this, msgarea,msgtitle" onclick="dlgContact.hide()"
+                				styleClass="button"/>
 			    </h:form>  
 			</p:dialog>  
 		</div>
